--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
     
     <meta name="theme-color" content="#FFF" media="(prefers-color-scheme: light)">    
     <meta name="theme-color" content="#111" media="(prefers-color-scheme: dark)">
+    
+    {% feed_meta %}
 
 </head>
 
