update the included default files

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
         <li><a href="#">RSS</a></li>
     </ul>
     <small>
-        The <a href="https://github.com/cspablocortez/Arrow">code for this project</a>
+        The <a href="https://github.com/cspablocortez/arrow-jekyll-theme">code for this project</a>
         is <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">GNU GPLv3</a>.
     </small>
     <p style="text-align: end;"><a href="#top">&uarr; Top</a></p>
