--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <li><a href="/posts">Posts</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/devlog">Devlog</a></li>
-        <li><a href="#">RSS</a></li>
+        <li><a href="/feed.xml">RSS</a></li>
     </ul>
     <small>
         The <a href="https://github.com/cspablocortez/arrow-jekyll-theme">code for this project</a>
