--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
     
 	<link rel="icon" href="data:,">
 	<title>{{ site.title }} | {{ page.title }}</title>
-	<link rel="stylesheet" href="/assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/article.css">
-    <link rel="stylesheet" href="/assets/css/monokai.css">
+	<link rel="stylesheet" href="{{ '/assets/css/base.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/article.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/monokai.css' | relative_url }}">
     
     <meta name="theme-color" content="#FFF" media="(prefers-color-scheme: light)">    
     <meta name="theme-color" content="#111" media="(prefers-color-scheme: dark)">
