--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -145,6 +145,10 @@ footer {
 }
 
 @media screen and (min-width: 600px) {
+  body {
+    line-height: 1.6; 
+  }
+  
   nav {
     margin-block: 2rem;
   }
