--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -57,9 +57,14 @@ nav {
   gap: 1rem;
 }
 
+nav a:visited {
+  color: var(--color-links);
+}
+
 blockquote {
 	border-left: 2px solid gray;
 	padding-left: 1rem;
+  margin: 2rem 1rem;
 }
 
 img { max-width: 100%; border-radius: 0.5rem;}
@@ -95,6 +100,10 @@ table {
 .feed, #menu {
 	list-style: none;
 	padding: 0;
+}
+
+footer a:visited {
+  color: var(--color-links);
 }
 
 .feed-item {
