--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="article">
     <hgroup>
         <h1>{{ page.title }}</h1>
-        <p><time>{{ page.date | date: "%a %B %d %Y"}}</time><p>
+        <p><time>{{ page.date | date: "%a %d %B %Y"}}</time><p>
     </hgroup>
     <main>
         {{ content }}
