--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,7 @@
         <li><a href="{{ '/feed.xml' | relative_url }}">RSS</a></li>
     </ul>
     <small>
-        © {{ "now" | date: "%Y" }} {{ site.title }}. Built with <a href="https://cspablocortez.github.io/arrow-jekyll-theme">Arrow</a>. <br>
-        The <a href="https://github.com/cspablocortez/arrow-jekyll-theme">code for this project</a>
-        is <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">GNU GPLv3</a>.
+        © {{ "now" | date: "%Y" }} {{ site.title }}. Built with <a href="https://cspablocortez.github.io/arrow-jekyll-theme">Arrow</a>.
     </small>
     <p style="text-align: end;"><a href="#top">&uarr; Top</a></p>
 </footer>
