--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,5 +9,5 @@
     <small>
         © {{ "now" | date: "%Y" }} {{ site.title }}. Built with <a href="https://cspablocortez.github.io/arrow-jekyll-theme">Arrow</a>.
     </small>
-    <p style="text-align: end;"><a href="#top">&uarr; Top</a></p>
+    <p style="text-align: end;"><a href="#top">Top &uarr;</a></p>
 </footer>
