--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -1,6 +1,6 @@
-<link rel="icon" type="image/png" href="/assets/images/brand/favicon/favicon-96x96.png | relative_url" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/assets/images/brand/favicon/favicon.svg | relative_url" />
-<link rel="shortcut icon" href="/assets/images/brand/favicon/favicon.ico | relative_url" />
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/brand/favicon/apple-touch-icon.png | relative_url" />
+<link rel="icon" type="image/png" href="{{ '/assets/images/brand/favicon/favicon-96x96.png' | relative_url }}" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="{{ '/assets/images/brand/favicon/favicon.svg' | relative_url }}" />
+<link rel="shortcut icon" href="{{ '/assets/images/brand/favicon/favicon.ico' | relative_url }}" />
+<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/brand/favicon/apple-touch-icon.png' | relative_url }}" />
 <meta name="apple-mobile-web-app-title" content="{{ site.title }}" />
-<link rel="manifest" href="/assets/images/brand/favicon/site.webmanifest | relative_url" />
+<link rel="manifest" href="{{ '/assets/images/brand/favicon/site.webmanifest' | relative_url }}" />
